change button colour, sugested by alfon

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   --bg-card: #1e293b;
   --bg-darker: #020617;
   --text-color: #f8fafc;
-  --accent-color: #20aae8;
+  --accent-color: #1a91c8;
   --secondary-text: #94a3b8;
   --border-color: #334155;
   --header-bg: rgba(15, 23, 42, 0.9);
