fix contact button hover colour

--- a/style.css
+++ b/style.css
@@ -116,6 +116,10 @@ nav a:hover {
   color: var(--accent-color);
 }
 
+nav .btn-sm:hover {
+  color: white !important;
+}
+
 .nav-spacer,
 .mobile-menu-toggle {
   display: none;
